# Loom

./: .gitignore  .loom-board-fix3.ts  .loom-board-panedeath.ts  .loom-board-sr.ts  .loom-board-tidy-smoke.ts  .loom-boot-persist-pack.md  .loom-claim-fix-0260b.ts  .loom-claim-hookcache.ts  .loom-claim-impl-0240-r3.ts  .loom-claim-impl-0240.ts  .loom-claim-impl-0241.ts  .loom-claim-impl-0242.ts  .loom-claim-impl-0250.ts  .loom-claim-impl-0261.ts  .loom-claim-panedeath.ts  .loom-claim-r37.ts  .loom-claim-r38.ts  .loom-claim-r39.ts  .loom-claim-route.ts  .loom-claim-smoke-hook-d.ts  .loom-claim-smoke-hook.ts  .loom-claim-smoke-sonnet26.ts  .loom-claim-smoke-vps1.ts  .loom-claim-smoke-wsl2.ts  .loom-claim-smoke-wsl2b.ts  .loom-claim-smoke-wsl2c.ts  .loom-claim-smoke-wsl2d.ts  .loom-dispatch-buffer.ts  .loom-dispatch-dverify.ts  .loom-dispatch-enforce.ts  .loom-dispatch-fix-0260.ts  .loom-dispatch-fix-0260b.ts  .loom-dispatch-hookcache-a.ts  .loom-dispatch-hookcache-b.ts  .loom-dispatch-hookcache-c.ts  .loom-dispatch-hookcache-d.ts  .loom-dispatch-hookcache-e.ts  .loom-dispatch-hookcache-v.ts  .loom-dispatch-impl-0240.ts  .loom-dispatch-impl-0241.ts  (+67 more)
.claude/: settings.json
.codex/: hooks.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  sticky.rs
docs/: ADAPTERS.md  AGENT_MEMORY_REVIEW.md  ANALYSIS_NOTES_2026-07-19.md  ARCHITECTURE.md  CHANGELOG.md  COMPETITIVE_NOTES.md  CONV_SPEC.md  DOC-REFRESH-PLAN.md  DOGFOOD_FEATURES.md  DOGFOOD_LOOP.md  DRY_RUN_RUNBOOK.md  GLOSSARY.md  (+22 more)
(+177 files in other folders)
