[package]
name = "loom-desktop"
version = "0.12.1"
description = "Loom desktop shell — sticky host UI (PLAN 0.11.1)"
authors = ["Loom"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "loom_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
ureq = { version = "2.12", features = ["json"] }
dirs = "6"
